cli/tests/error_018_hide_long_source_js.js.out
error: Uncaught TypeError: Cannot read property 'a' of undefined
► file:///[WILDCARD]cli/tests/error_018_hide_long_source_js.js:2:206
    at file:///[WILDCARD]cli/tests/error_018_hide_long_source_js.js:2:206
